# trabalho-computacao-grafica-head-soccer

./: CMakeLists.txt  README.md  main.cpp
Soccer/: main.cpp
assets/models/: bola.glb  jogador.fbx  trave.glb
include/: Audio.h  Config.h  GameState.h  HUD.h  Input.h  Model3D.h  ModeloAnimado.h  Physics.h  Renderer.h  Update.h
src/: Audio.cpp  GameState.cpp  HUD.cpp  Input.cpp  Model3D.cpp  ModeloAnimado.cpp  Physics.cpp  Renderer.cpp  Update.cpp  main.cpp
